# practice_notebook

./: .gitignore  pyproject.toml
practice/: torch_practice.ipynb
