[tool.poetry]
name = "practice_notebook"
version = "0.1.0"
description = ""
authors = ["n4okins <n4okins.developer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"

torch = {path = "wheels/torch-2.0.0+cu117-cp310-cp310-win_amd64.whl"}
torchvision = {path = "wheels/torchvision-0.15.1+cu117-cp310-cp310-win_amd64.whl"}
torchaudio = {path = "wheels/torchaudio-2.0.1+cu117-cp310-cp310-win_amd64.whl"}
torch-scatter = {path = "wheels/torch_scatter-2.1.1+pt20cu117-cp310-cp310-win_amd64.whl"}
torch-cluster = {path = "wheels/torch_cluster-1.6.1+pt20cu117-cp310-cp310-win_amd64.whl"}
torch-sparse = {path = "wheels/torch_sparse-0.6.17+pt20cu117-cp310-cp310-win_amd64.whl"}
torch-spline-conv = {path = "wheels/torch_spline_conv-1.2.2+pt20cu117-cp310-cp310-win_amd64.whl"}
nuitka = {path = "wheels/Nuitka-1.6rc7-cp310-cp310-win_amd64.whl"}
numpy = "<1.24"
matplotlib = "^3.7.1"
scipy = "^1.10.1"
sympy = "^1.11.1"
jupyter = "^1.0.0"
jupyterlab = "^3.6.3"
networkx = "^3.1"
pillow = "^9.5.0"
opencv-contrib-python = "^4.7.0.72"
cupy-cuda11x = "^12.0.0"
tqdm = "^4.65.0"
pandas = "^2.0.0"
japanize-matplotlib = "^1.1.3"
seaborn = "^0.12.2"
plotly = "^5.14.1"
requests = "^2.28.2"
beautifulsoup4 = "^4.12.2"
flask = "^2.2.3"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
django = "^4.2"
optuna = "^3.1.1"
xgboost = "^1.7.5"
lightgbm = "^3.3.5"
ginza = "^5.1.2"
ja-ginza-electra = "^5.1.2"
mecab-python3 = "^1.0.6"
unidic-lite = "^1.0.8"
scikit-image = {extras = ["data"], version = "^0.20.0"}
pyworld = "^0.3.2"
pyaudio = "^0.2.13"
polars = {extras = ["all"], version = "^0.17.2"}
gym = "^0.26.2"
scikit-learn = "^1.2.2"
gensim = "^4.3.1"
einops = "^0.6.0"
openai = "^0.27.4"
transformers = "<4.27.0"
spacy-transformers = "<1.2.0"
huggingface-hub = "^0.13.4"
pydantic = "^1.10.7"
zstandard = "^0.20.0"
rays = "^0.4.3"
pyspark = "^3.3.2"
tensorflow-io-gcs-filesystem = "0.31.0"
tensorflow = "<=2.10"
pyside6 = "^6.5.0"
langchain = "^0.0.138"
librosa = "<0.10.0"
pysimplegui = "^4.60.4"
pygame = "^2.3.0"
attrs = "^22.2.0"
boto3 = "^1.26.112"
h5py = "^3.8.0"
lxml = "^4.9.2"
html5lib = "^1.1"
imageio = "^2.27.0"
joblib = "^1.2.0"
nltk = "^3.8.1"
numba = "^0.56.4"
openpyxl = "^3.1.2"
pycryptodome = "^3.17"
pygments = "^2.15.0"
pyopenssl = "^23.1.1"
pyqt6 = "^6.5.0"
pysocks = "^1.7.1"
tables = "^3.8.0"
pywin32 = "^306"
bottle = "^0.12.25"
dill = "^0.3.6"
dlib = "^19.24.1"
graphviz = "^0.20.1"
gspread = "^5.8.0"
easydict = "^1.10"
oauthlib = "^3.2.2"
opencv-python = "^4.7.0.72"
pyopengl = "^3.1.6"
pyopengl-accelerate = "^3.1.6"
pywavelets = "^1.4.1"
statsmodels = "^0.13.5"
tabulate = "^0.9.0"
torchinfo = "^1.7.2"
wasabi = "<1.1.0"
yellowbrick = "^1.5"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"
flake8 = "^6.0.0"
black = "^23.3.0"
mypy = "^1.2.0"
flake8-isort = "^6.0.0"
flake8-bugbear = "^23.3.23"
flake8-builtins = "^2.1.0"
flake8-unused-arguments = "^0.0.13"
flake8-pytest-style = "^1.7.2"
pep8-naming = "^0.13.3"
pytest = "^7.3.0"
pytest-mock = "^3.10.0"
pytest-cov = "^4.0.0"
sphinx = "^6.1.3"
sphinx-rtd-theme = "^1.2.0"
sphinx-pyproject = "^0.1.0"
taskipy = "^1.10.4"

[tool.taskipy.tasks]
format = "black . && isort . "

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
